fixed thumbnails not fitting into three columns

--- a/vagrant/catalog/static/styles.css
+++ b/vagrant/catalog/static/styles.css
@@ -249,7 +249,7 @@ old style - delete if I like the new style */
 }
 
 .grid-item-catalog-tn {
-	width: 33%;
+	width: 32%;
 }
 
 .grid-item-catalog-img {
